# snn

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  SNN  cmake_install.cmake  runtest.cpp  runtime  setup.py
.github/workflows/: c-cpp.yml  cmake.yml
examples/: omp_test.py  runtime.py
exp/: README.md  bf_search.py  neighbors_info_norm.ipynb  parameter_test.ipynb  parameter_test_range_count.ipynb  real_world_norm.ipynb  rw_info.ipynb  visualize.ipynb
exp/addexp/: plotGriSPy.ipynb  testGriSPy1.ipynb  testGriSPy2.ipynb  testGriSPy_returns.ipynb
exp/addexp/result/: add1_gp_index_time.npy  add1_gp_query_time.npy  add1_snn_index_time.npy  add1_snn_query_time.npy  add2_gp_index_time.npy  add2_gp_query_time.npy  add2_snn_index_time.npy  add2_snn_query_time.npy
exp/exp1/: generate_plot.ipynb  parameter_test1.ipynb  parameter_test2.ipynb
exp/exp2/: angular_deep1b1.ipynb  angular_deep1b2.ipynb  angular_deep1b3.ipynb  angular_deep1b4.ipynb  angular_deep1b5.ipynb  angular_glove.ipynb  download.sh  euclidean_fmn.ipynb  euclidean_gist.ipynb  euclidean_sifts.ipynb  euclidean_siftsmall.ipynb  hdf5_tonpy.py  printinfo.ipynb
exp/exp3/: README.md  printinfo.ipynb  real_cluster.ipynb
exp/exp3/dcnn/: __init__.py  sample.py  setup.py
exp/exp3/dcnn/native/: __init__.py  dbscan_batch.py  native_cc.cpp
exp/exp3/dcnn/native/.ipynb_checkpoints/: dbscan-checkpoint.py  native_cc-checkpoint.cpp  native_cc-checkpoint.pyx
exp/exp3/dcnn/snn/: dbscan.py  dbscan_batch.py  snn_cc.cpp
exp/exp3/dcnn/snn/.ipynb_checkpoints/: query-checkpoint.py  snn_cc-checkpoint.pyx
exp/fashion_mnist/: neighbors.npy
exp/former/: parameter_test_radius_count.ipynb  real_cluster.py  table_norm.ipynb
include/: blasi.h  eign.h  snn.h
python/: README.md  query.pyx  runtime.py  setup.py  snnpy.py
python/snnpy/: __init__.py  query.pyx  snnpy.py
python/snnpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snnpy/: snnpy.cpp
snnpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: blasi.cpp  snn.cpp
trash/: CMakeLists.txt
trash/src/: eign.cpp
